[gd_scene load_steps=3 format=3 uid="uid://ibm4r28win81"]

[ext_resource type="Script" path="res://ui.gd" id="1_pys2d"]
[ext_resource type="PackedScene" uid="uid://cpnksao65rk33" path="res://countdown.tscn" id="2_8iv4q"]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pys2d")

[node name="Middle" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -20.0
offset_right = 42.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoLabel" type="Label" parent="Middle"]
layout_mode = 2
text = "New Game"

[node name="PlayAgainButton" type="Button" parent="Middle"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Play again"

[node name="PlayButton" type="Button" parent="Middle"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Play"

[node name="Attributions" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -104.0
offset_right = 368.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Attributions"]
layout_mode = 2

[node name="Me" type="Label" parent="Attributions/VBoxContainer"]
layout_mode = 2
text = "© Chris Coomber
"

[node name="Spaceship" type="LinkButton" parent="Attributions/VBoxContainer"]
layout_mode = 2
text = "Spaceship art © freepik"
underline = 1
uri = "https://www.freepik.com/free-vector/collection-spaceships_2867331.htm#fromView=search&page=2&position=47&uuid=c8dea926-0a6e-4856-a31c-e3f7924611ca"

[node name="Bomb" type="LinkButton" parent="Attributions/VBoxContainer"]
layout_mode = 2
text = "Bomb art © freepik"
underline = 1
uri = "https://www.freepik.com/free-vector/flat-design-pixel-art-set-illustration_37984235.htm#fromView=search&page=1&position=41&uuid=fd8491f0-48c5-4962-adf9-8b60a8b515e4"

[node name="Space background" type="LinkButton" parent="Attributions/VBoxContainer"]
layout_mode = 2
text = "Space background art © le professeur stagiaire"
underline = 1
uri = "https://le-professeur-stagiaire.itch.io/"

[node name="Asteroids" type="LinkButton" parent="Attributions/VBoxContainer"]
layout_mode = 2
text = "Asteroids © The Leafy Lemur"
underline = 1
uri = "https://theleafylemur.itch.io/"

[node name="Moon" type="LinkButton" parent="Attributions/VBoxContainer"]
layout_mode = 2
text = "Moon © Helianthus Games"
underline = 1
uri = "https://helianthus-games.itch.io/"

[node name="Countdown" parent="." instance=ExtResource("2_8iv4q")]
layout_mode = 1

[node name="Controls" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.5
offset_top = 126.0
offset_right = 196.5
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Press [Space] to accelerate!"

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -289.0
offset_top = -58.0
grow_horizontal = 0
grow_vertical = 0

[node name="BallWraparoundToggle" type="CheckButton" parent="Options"]
layout_mode = 2
button_pressed = true
text = "Ball can wrap around"

[node name="WraparoundToggle" type="CheckButton" parent="Options"]
layout_mode = 2
button_pressed = true
text = "Paddles can wrap around"

[node name="HBoxContainer" type="HBoxContainer" parent="Options"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/HBoxContainer"]
layout_mode = 2
text = "Difficulty"

[node name="DifficultySlider" type="HSlider" parent="Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 3.0
value = 2.0
tick_count = 3
ticks_on_borders = true

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.12549)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paused"

[node name="Button" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit"

[connection signal="pressed" from="Middle/PlayAgainButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Middle/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="go" from="Countdown" to="." method="_on_countdown_go"]
[connection signal="toggled" from="Options/BallWraparoundToggle" to="." method="_on_ball_wraparound_toggle_toggled"]
[connection signal="toggled" from="Options/WraparoundToggle" to="." method="_on_wraparound_toggle_toggled"]
[connection signal="value_changed" from="Options/HBoxContainer/DifficultySlider" to="." method="_on_difficulty_slider_value_changed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/Button" to="." method="_on_button_pressed"]
